syntax = "proto3";

package grpc;

option go_package = "github.com/dosanma1/go-grpc-wallet/pkg/pb/";

message Wallet {
    string userId = 1;
    int64 balance = 2;
}

message FundsReq {
    string userId = 1;
    int64 amount = 2;
}

message WalletReq {
    string userId = 1;
}

service WalletService {
    rpc CreateWallet(Wallet) returns (Wallet);
    rpc UpdateWallet(FundsReq) returns (Wallet);
    rpc GetWallet(WalletReq) returns (Wallet);
}